# DRF_HW

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  models.py  tasks.py  tests.py  urls.py  validators.py
courses/migrations/: 0001_initial.py  0002_lesson.py  0003_course_user_lesson_user.py  0004_subscription.py
courses/serializers/: course.py  lesson.py  subscription.py
courses/views/: course.py  lesson.py  subscription.py
payments/: admin.py  models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_payment_id_payment.py  0003_alter_payment_id_payment.py  0004_alter_payment_id_payment.py  0005_alter_payment_id_payment.py
users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_is_active.py
